[gd_scene load_steps=69 format=2]

[ext_resource path="res://assets/Skeleton/SkeletonWalk.png" type="Texture" id=1]
[ext_resource path="res://assets/Skeleton/SkeletonAttack.png" type="Texture" id=2]
[ext_resource path="res://assets/Skeleton/SkeletonIdle.png" type="Texture" id=3]
[ext_resource path="res://scenes/EnemySkeleton.gd" type="Script" id=4]
[ext_resource path="res://assets/Skeleton/SkeletonHit.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 2.53338, 11.6199 )

[sub_resource type="RectangleShape2D" id=53]

[sub_resource type="RectangleShape2D" id=54]

[sub_resource type="Animation" id=55]
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite/AxeHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=56]

[sub_resource type="Animation" id=60]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=58]
states/attack/node = SubResource( 57 )
states/attack/position = Vector2( 283, 74 )
states/idle/node = SubResource( 61 )
states/idle/position = Vector2( 458, 62 )
transitions = [ "idle", "attack", SubResource( 62 ), "attack", "idle", SubResource( 63 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=59]

[node name="EnemySkeleton" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.835951, -36.9355 )
frames = SubResource( 51 )
animation = "hit"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.9349, -11.7264 )
shape = SubResource( 52 )

[node name="AttackSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 21.6408, -18.5354 )
texture = ExtResource( 2 )
hframes = 18
frame = 1

[node name="AxeHit" type="Area2D" parent="AttackSprite"]
position = Vector2( 3.77008, -1.5874 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSprite/AxeHit"]
position = Vector2( 7.71498, 10.1197 )
shape = SubResource( 53 )
disabled = true

[node name="AttackTrigger" type="Area2D" parent="AttackSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSprite/AttackTrigger"]
position = Vector2( 11.4445, 8.14092 )
shape = SubResource( 54 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 55 )
anims/hit = SubResource( 56 )
anims/idle = SubResource( 60 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 58 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 59 )

[node name="IdleSprite" type="Sprite" parent="."]
position = Vector2( 15.0137, -16.2029 )
texture = ExtResource( 3 )
hframes = 11
frame = 4
[connection signal="body_entered" from="AttackSprite/AxeHit" to="." method="_on_AxeHit_body_entered"]
[connection signal="body_entered" from="AttackSprite/AttackTrigger" to="." method="_on_AttackTrigger_body_entered"]
